syntax = "proto3";
package pb;

// The greeting service definition.
service Session {
  // Sends a greeting
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse) {}
}

message SessionInfo{
	uint64 SessionId = 1;
}

message SessionUserInfo{
	string UserId = 1;	//用户id
}

message CreateSessionRequest{
	uint64 	Rid = 1;		//流水号
 	string 	AppId = 11;		//app唯一标识
	repeated SessionUserInfo SessionUsers = 12;//会话包含的用户信息
}


message CreateSessionResponse{
	uint64 	Rid = 1;	//流水号
	string 	Code = 2;	//回应的响应码
	string 	Desc = 3;	//回应码的描述
	SessionInfo Session = 11;
}
